API/Litecad.h


HANDLE LCAPI lcBlockAddBlockRefID  (HANDLE hBlock, int idRefBlock, double X, double Y, double Scal, double Angle);  // undoc
HANDLE LCAPI lcBlockAddBlockRefIDH (HANDLE hBlock, LPCWSTR szIdRefBlock, double X, double Y, double Scal, double Angle);  // undoc
HANDLE LCAPI lcBlockAddImageRef (HANDLE hBlock, HANDLE hImage, double X, double Y, double Width, double Height, BOOL bBorder);

HANDLE LCAPI lcBlockAddEcw      (HANDLE hBlock, LPCWSTR szFileName);

HANDLE LCAPI lcBlockAddAttDef   (HANDLE hBlock, int Mode, LPCWSTR szTag, LPCWSTR szPrompt, LPCWSTR szDefVal, double X, double Y, int Align, double H, double WScale, double RotAngle, double Oblique);

HANDLE LCAPI lcBlockAddHatch    (HANDLE hBlock, LPCWSTR szFileName, LPCWSTR szPatName, double Scal, double Angle);

HANDLE LCAPI lcBlockAddViewport (HANDLE hBlock, double Lef, double Bot, double Width, double Height, double DrwPntX, double DrwPntY, double DrwScale, double DrwAngle);

HANDLE LCAPI lcBlockAddLeader   (HANDLE hBlock, LPCWSTR szText, double Xt, double Yt, double LandDist, double Xa, double Ya, int Attach, int Align);

HANDLE LCAPI lcBlockAddDimRot   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, double Angle, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimHor   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Yt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimVer   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimAli   (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Xt, double Yt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimAli2  (HANDLE hBlock, double X0, double Y0, double X1, double Y1, double Dt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimOrd   (HANDLE hBlock, double Xd, double Yd, double Xt, double Yt, bool bX, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimRad   (HANDLE hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimRad2  (HANDLE hBlock, double Xc, double Yc, double R, double Angle, double TextOff, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimDia   (HANDLE hBlock, double Xc, double Yc, double Xr, double Yr, double Xt, double Yt, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimDia2  (HANDLE hBlock, double Xc, double Yc, double R, double Angle, double TextOff, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimAng   (HANDLE hBlock, double Xc, double Yc, double X1, double Y1, double X2, double Y2, double Xa, double Ya, double TextPos, LPCWSTR szText);

HANDLE LCAPI lcBlockAddDimAng2  (HANDLE hBlock, double X1, double Y1, double X2, double Y2, double X3, double Y3, double X4, double Y4, double Xa, double Ya, double TextPos, LPCWSTR szText);


// Retrieve graphic objects from a block
HANDLE LCAPI lcBlockGetFirstEnt (HANDLE hBlock);

HANDLE LCAPI lcBlockGetNextEnt  (HANDLE hBlock, HANDLE hEnt);

HANDLE LCAPI lcBlockGetLastEnt  (HANDLE hBlock);

HANDLE LCAPI lcBlockGetPrevEnt  (HANDLE hBlock, HANDLE hEnt);

HANDLE LCAPI lcBlockGetEntByID  (HANDLE hBlock, int Id);

HANDLE LCAPI lcBlockGetEntByIDH (HANDLE hBlock, LPCWSTR szId);

HANDLE LCAPI lcBlockGetEntByKey (HANDLE hBlock, int Key);


// Selection
BOOL   LCAPI lcBlockUnselect    (HANDLE hBlock);

BOOL   LCAPI lcBlockSelectEnt   (HANDLE hBlock, HANDLE hEntity, BOOL bSelect);

BOOL   LCAPI lcBlockSelErase    (HANDLE hBlock);

BOOL   LCAPI lcBlockSelMove     (HANDLE hBlock, double dX, double dY, BOOL bCopy, BOOL bNewSelect);

BOOL   LCAPI lcBlockSelScale    (HANDLE hBlock, double X0, double Y0, double Scal, BOOL bCopy, BOOL bNewSelect);

BOOL   LCAPI lcBlockSelRotate   (HANDLE hBlock, double X0, double Y0, double Angle, BOOL bCopy, BOOL bNewSelect);

BOOL   LCAPI lcBlockSelMirror   (HANDLE hBlock, double X1, double Y1, double X2, double Y2, BOOL bCopy, BOOL bNewSelect);

BOOL   LCAPI lcBlockSelExplode  (HANDLE hBlock);

HANDLE LCAPI lcBlockSelJoin     (HANDLE hBlock, double Delta);

HANDLE LCAPI lcBlockGetFirstSel (HANDLE hBlock);

HANDLE LCAPI lcBlockGetNextSel  (HANDLE hBlock);


// Graphic object modify
BOOL   LCAPI lcEntErase     (HANDLE hEnt, BOOL bErase);
 
BOOL   LCAPI lcEntMove      (HANDLE hEnt, double dX, double dY);
 
BOOL   LCAPI lcEntScale     (HANDLE hEnt, double X0, double Y0, double Scal);
 
BOOL   LCAPI lcEntRotate    (HANDLE hEnt, double X0, double Y0, double Angle);

BOOL   LCAPI lcEntMirror    (HANDLE hEnt, double X1, double Y1, double X2, double Y2);

BOOL   LCAPI lcEntExplode   (HANDLE hEnt, BOOL bSelect);

BOOL   LCAPI lcEntOffset    (HANDLE hEnt, double Dist);
 
BOOL   LCAPI lcEntToTop     (HANDLE hEnt);

BOOL   LCAPI lcEntToBottom  (HANDLE hEnt);

BOOL   LCAPI lcEntToAbove   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcEntToUnder   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcEntGetGrip   (HANDLE hEnt, int iGrip, double* pX, double* pY);
 
BOOL   LCAPI lcEntPutGrip   (HANDLE hEnt, int iGrip, double X, double Y);

BOOL   LCAPI lcEntUpdate    (HANDLE hEnt);         // undoc

int    LCAPI lcIntersection   (HANDLE hEnt, HANDLE hEnt2);

BOOL   LCAPI lcInterGetPoint  (int iPoint, double* pX, double* pY);


// Polyline Vertices
HANDLE LCAPI lcPlineAddVer      (HANDLE hPline, HANDLE hVer0, double X, double Y);

HANDLE LCAPI lcPlineAddVer2     (HANDLE hPline, HANDLE hVer0, double X, double Y, double Param, double W0, double W1);

HANDLE LCAPI lcPlineAddVerDir   (HANDLE hPline, HANDLE hVer0, double Ang, double Len);

BOOL   LCAPI lcPlineDeleteVer   (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetFirstVer (HANDLE hPline);

HANDLE LCAPI lcPlineGetNextVer  (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetLastVer  (HANDLE hPline);

HANDLE LCAPI lcPlineGetPrevVer  (HANDLE hPline, HANDLE hVer);

HANDLE LCAPI lcPlineGetVer      (HANDLE hPline, int Index);

HANDLE LCAPI lcPlineGetVerPt    (HANDLE hPline, double X, double Y, double Delta);

HANDLE LCAPI lcPlineGetSeg      (HANDLE hPline, double X, double Y, double Delta);

BOOL   LCAPI lcPlineReverse     (HANDLE hPline);


// Viewport
BOOL   LCAPI lcVportSetView     (HANDLE hVport, double Xcen, double Ycen, double Scale, double Angle);

BOOL   LCAPI lcVportFrolClear   (HANDLE hVport);

BOOL   LCAPI lcVportFrolAdd     (HANDLE hVport, HANDLE hLayer);

HANDLE LCAPI lcVportFrolGet     (HANDLE hVport, int iLayer);

BOOL   LCAPI lcVportIsFrol      (HANDLE hVport, HANDLE hLayer);


// Block attribute
HANDLE LCAPI lcBlkRefAddAtt      (HANDLE hBlockRef, LPCWSTR szTag, LPCWSTR szValue);    // undoc
HANDLE LCAPI lcBlkRefGetFirstAtt (HANDLE hBlockRef);

HANDLE LCAPI lcBlkRefGetNextAtt  (HANDLE hBlockRef, HANDLE hAttrib);

HANDLE LCAPI lcBlkRefGetAtt      (HANDLE hBlockRef, LPCWSTR szTag);


// Hatch
BOOL   LCAPI lcHatchBoundStart   (HANDLE hHatch);

BOOL   LCAPI lcHatchBoundPoint   (HANDLE hHatch, double X, double Y);

BOOL   LCAPI lcHatchBoundEndLoop (HANDLE hHatch);
 
BOOL   LCAPI lcHatchBoundEnd     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatStart     (HANDLE hHatch);
 
BOOL   LCAPI lcHatchPatLine      (HANDLE hHatch, double Angle, double x0, double y0, double dx, double dy, int nDash, double L0, double L1, double L2, double L3, double L4, double L5, double L6, double L7);

BOOL   LCAPI lcHatchPatEnd       (HANDLE hHatch);

int    LCAPI lcHatchGetLoopSize  (HANDLE hHatch, int iLoop);

BOOL   LCAPI lcHatchGetPoint     (HANDLE hHatch, int iPnt, double* pX, double* pY);


// Rectangle
int    LCAPI lcRectGetPolyline   (HANDLE hRect, double* pX, double* pY, double* pBulge);


// Construction line
BOOL   LCAPI lcXlinePutDir  (HANDLE hXline, double X, double Y);


// Design window
HANDLE LCAPI lcCreateWindow      (HWND  hWndParent, int Style, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcDeleteWindow      (HANDLE hLcWnd);

BOOL   LCAPI lcWndResize         (HANDLE hLcWnd, int Left, int Top, int Width, int Height);

BOOL   LCAPI lcWndSelectView     (HANDLE hLcWnd, HANDLE hView);

BOOL   LCAPI lcWndZoomRect       (HANDLE hLcWnd, double Left, double Bottom, double Right, double Top);

BOOL   LCAPI lcWndZoomScale      (HANDLE hLcWnd, double Scal);

BOOL   LCAPI lcWndRedraw         (HANDLE hLcWnd);

BOOL   LCAPI lcWndSetFocus       (HANDLE hLcWnd);

BOOL   LCAPI lcWndExeCommand     (HANDLE hLcWnd, int Command, int CmdParam);