API/Litecad.pas

Function lcBlockAddBlockRefID (hBlock: Integer; idRefBlock: Integer; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddBlockRefIDH (hBlock: Integer; szIdRefBlock: PWideChar; X: Double; Y: Double; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddImageRef (hBlock: Integer; hImage: Integer; X: Double; Y: Double; Width: Double; Height: Double; bBorder: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddEcw (hBlock: Integer; szFileName: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddAttDef (hBlock: Integer; Mode: Integer; szTag: PWideChar; szPrompt: PWideChar; szDefVal: PWideChar; X: Double; Y: Double; Align: Integer; H: Double; WScale: Double; RotAngle: Double; Oblique: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddHatch (hBlock: Integer; szFileName: PWideChar; szPatName: PWideChar; Scal: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddViewport (hBlock: Integer; Lef: Double; Bot: Double; Width: Double; Height: Double; DrwPntX: Double; DrwPntY: Double; DrwScale: Double; DrwAngle: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddLeader (hBlock: Integer; szText: PWideChar; Xt: Double; Yt: Double; LandDist: Double; Xa: Double; Ya: Double; Attach: Integer; Align: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRot (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; Angle: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimHor (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimVer (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAli (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAli2 (hBlock: Integer; X0: Double; Y0: Double; X1: Double; Y1: Double; Dt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimOrd (hBlock: Integer; Xd: Double; Yd: Double; Xt: Double; Yt: Double; bX: Integer; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRad (hBlock: Integer; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimRad2 (hBlock: Integer; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimDia (hBlock: Integer; Xc: Double; Yc: Double; Xr: Double; Yr: Double; Xt: Double; Yt: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimDia2 (hBlock: Integer; Xc: Double; Yc: Double; R: Double; Angle: Double; TextOff: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAng (hBlock: Integer; Xc: Double; Yc: Double; X1: Double; Y1: Double; X2: Double; Y2: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockAddDimAng2 (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; X3: Double; Y3: Double; X4: Double; Y4: Double; Xa: Double; Ya: Double; TextPos: Double; szText: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetFirstEnt (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetNextEnt (hBlock: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetLastEnt (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetPrevEnt (hBlock: Integer; hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByID (hBlock: Integer; Id: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByIDH (hBlock: Integer; szId: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetEntByKey (hBlock: Integer; Key: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockUnselect (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelectEnt (hBlock: Integer; hEntity: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelErase (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelMove (hBlock: Integer; dX: Double; dY: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelScale (hBlock: Integer; X0: Double; Y0: Double; Scal: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelRotate (hBlock: Integer; X0: Double; Y0: Double; Angle: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelMirror (hBlock: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double; bCopy: Integer; bNewSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelExplode (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockSelJoin (hBlock: Integer; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetFirstSel (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlockGetNextSel (hBlock: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntErase (hEnt: Integer; bErase: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntMove (hEnt: Integer; dX: Double; dY: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntScale (hEnt: Integer; X0: Double; Y0: Double; Scal: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntRotate (hEnt: Integer; X0: Double; Y0: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntMirror (hEnt: Integer; X1: Double; Y1: Double; X2: Double; Y2: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntExplode (hEnt: Integer; bSelect: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntOffset (hEnt: Integer; Dist: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntToTop (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToBottom (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToAbove (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntToUnder (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcEntGetGrip (hEnt: Integer; iGrip: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcEntPutGrip (hEnt: Integer; iGrip: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcEntUpdate (hEnt: Integer): Integer; stdcall; external 'litecad.dll';
Function lcIntersection (hEnt: Integer; hEnt2: Integer): Integer; stdcall; external 'litecad.dll';
Function lcInterGetPoint (iPoint: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVer (hPline: Integer; hVer0: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVer2 (hPline: Integer; hVer0: Integer; X: Double; Y: Double; Param: Double; W0: Double; W1: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineAddVerDir (hPline: Integer; hVer0: Integer; Ang: Double; Len: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineDeleteVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetFirstVer (hPline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetNextVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetLastVer (hPline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetPrevVer (hPline: Integer; hVer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetVer (hPline: Integer; Index: Integer): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetVerPt (hPline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineGetSeg (hPline: Integer; X: Double; Y: Double; Delta: Double): Integer; stdcall; external 'litecad.dll';
Function lcPlineReverse (hPline: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportSetView (hVport: Integer; Xcen: Double; Ycen: Double; Scale: Double; Angle: Double): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolClear (hVport: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolAdd (hVport: Integer; hLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportFrolGet (hVport: Integer; iLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcVportIsFrol (hVport: Integer; hLayer: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefAddAtt (hBlockRef: Integer; szTag: PWideChar; szValue: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetFirstAtt (hBlockRef: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetNextAtt (hBlockRef: Integer; hAttrib: Integer): Integer; stdcall; external 'litecad.dll';
Function lcBlkRefGetAtt (hBlockRef: Integer; szTag: PWideChar): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundStart (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundPoint (hHatch: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundEndLoop (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchBoundEnd (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatStart (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatLine (hHatch: Integer; Angle: Double; x0: Double; y0: Double; dx: Double; dy: Double; nDash: Integer; L0: Double; L1: Double; L2: Double; L3: Double; L4: Double; L5: Double; L6: Double; L7: Double): Integer; stdcall; external 'litecad.dll';
Function lcHatchPatEnd (hHatch: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchGetLoopSize (hHatch: Integer; iLoop: Integer): Integer; stdcall; external 'litecad.dll';
Function lcHatchGetPoint (hHatch: Integer; iPnt: Integer; pX: Pdouble; pY: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcRectGetPolyline (hRect: Integer; pX: Pdouble; pY: Pdouble; pBulge: Pdouble): Integer; stdcall; external 'litecad.dll';
Function lcXlinePutDir (hXline: Integer; X: Double; Y: Double): Integer; stdcall; external 'litecad.dll';
Function lcCreateWindow (hWndParent: HWND; Style: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcDeleteWindow (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndResize (hLcWnd: Integer; Left: Integer; Top: Integer; Width: Integer; Height: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSelectView (hLcWnd: Integer; hView: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndZoomRect (hLcWnd: Integer; Left: Double; Bottom: Double; Right: Double; Top: Double): Integer; stdcall; external 'litecad.dll';
Function lcWndZoomScale (hLcWnd: Integer; Scal: Double): Integer; stdcall; external 'litecad.dll';
Function lcWndRedraw (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndSetFocus (hLcWnd: Integer): Integer; stdcall; external 'litecad.dll';
Function lcWndExeCommand (hLcWnd: Integer; Command: Integer; CmdParam: Integer): Integer; stdcall; external 'litecad.dll';
